v0.0.1/modules/schema/pages/class/LifecycleDate.adoc
= `LifecycleDate`
:toclevels: 4


+++Dates for asset lifecycle state changes. May have multiple lifecycle dates for this device and a compound type allows a query to return multiple dates.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LifecycleDate`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`LifecycleDate`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<installationDate,`installationDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date current installation was completed, which may not be the same as the in-service date. Asset may have been installed at other locations previously. Ignored if asset is (1) not currently installed (e.g., stored in a depot) or (2) not intended to be installed (e.g., vehicle, tool).+++

| <<manufacturedDate,`manufacturedDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date the asset was manufactured.+++

| <<purchaseDate,`purchaseDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date the asset was purchased. Note that even though an asset may have been purchased, it may not have been received into inventory at the time of purchase.+++

| <<receivedDate,`receivedDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date the asset was received and first placed into inventory.+++

| <<removalDate,`removalDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date when the asset was last removed from service. Ignored if (1) not intended to be in service, or (2) currently in service.+++

| <<retiredDate,`retiredDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date the asset is permanently retired from service and may be scheduled for disposal. Ignored if asset is (1) currently in service, or (2) permanently removed from service.+++
|===

'''


//[discrete]
[#installationDate]
=== `installationDate`
+++Date current installation was completed, which may not be the same as the in-service date. Asset may have been installed at other locations previously. Ignored if asset is (1) not currently installed (e.g., stored in a depot) or (2) not intended to be installed (e.g., vehicle, tool).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LifecycleDate.installationDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#manufacturedDate]
=== `manufacturedDate`
+++Date the asset was manufactured.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LifecycleDate.manufacturedDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#purchaseDate]
=== `purchaseDate`
+++Date the asset was purchased. Note that even though an asset may have been purchased, it may not have been received into inventory at the time of purchase.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LifecycleDate.purchaseDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#receivedDate]
=== `receivedDate`
+++Date the asset was received and first placed into inventory.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LifecycleDate.receivedDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#removalDate]
=== `removalDate`
+++Date when the asset was last removed from service. Ignored if (1) not intended to be in service, or (2) currently in service.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LifecycleDate.removalDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#retiredDate]
=== `retiredDate`
+++Date the asset is permanently retired from service and may be scheduled for disposal. Ignored if asset is (1) currently in service, or (2) permanently removed from service.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LifecycleDate.retiredDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===


